cmake_minimum_required(VERSION 3.16)
project(phys_engine LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

# Header-only engine.
add_library(phys INTERFACE)
target_include_directories(phys INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)

enable_testing()
find_package(Threads REQUIRED)
foreach(t core particle rigidbody collision resolution stacking features harmonics sph leaf convex articulation contacts2 softbody constraint2 query robotics advanced)
    add_executable(test_${t} tests/test_${t}.cpp)
    target_link_libraries(test_${t} PRIVATE phys Threads::Threads)
    target_include_directories(test_${t} PRIVATE tests)
    add_test(NAME ${t} COMMAND test_${t})
endforeach()

add_executable(demo demos/demo.cpp)
target_link_libraries(demo PRIVATE phys)

# 3D OpenGL demos (rigid bodies, cloth, hair) — built only if GLFW/GLEW present.
find_package(PkgConfig QUIET)
find_package(OpenGL QUIET)
if(PkgConfig_FOUND AND OpenGL_FOUND)
    pkg_check_modules(GLFW glfw3)
    pkg_check_modules(GLEW glew)
    find_package(ZLIB QUIET)
    if(GLFW_FOUND AND GLEW_FOUND AND ZLIB_FOUND)
        foreach(d rigid3d cloth3d hair3d clothesline3d destruction3d wall3d playground3d snow3d mirror3d forge3d rope3d chains3d tangle3d burn3d harmonics3d nonnewtonian3d lava3d leaves3d galton3d articulation3d softbody3d constraints3d robotics3d convex3d stack3d)
            add_executable(${d} demos/${d}.cpp)
            target_link_libraries(${d} PRIVATE phys ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} OpenGL::GL ZLIB::ZLIB Threads::Threads)
            target_include_directories(${d} PRIVATE demos ${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
        endforeach()
    else()
        message(STATUS "GLFW/GLEW/zlib not all found — skipping 3D OpenGL demos")
    endif()
endif()
