cmake_minimum_required(VERSION 3.16)
project(phys_engine LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

# Header-only engine.
add_library(phys INTERFACE)
target_include_directories(phys INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)

enable_testing()
find_package(Threads REQUIRED)
foreach(t core particle rigidbody collision resolution stacking features harmonics sph leaf convex articulation contacts2 softbody constraint2 query robotics advanced ros compound em explosion)
    add_executable(test_${t} tests/test_${t}.cpp)
    target_link_libraries(test_${t} PRIVATE phys Threads::Threads)
    target_include_directories(test_${t} PRIVATE tests)
    add_test(NAME ${t} COMMAND test_${t})
endforeach()

add_executable(demo demos/demo.cpp)
target_link_libraries(demo PRIVATE phys)

# Electromagnetics field/antenna demo — CPU-rendered PNG frames, needs only zlib.
find_package(ZLIB QUIET)
if(ZLIB_FOUND)
    add_executable(em2d demos/em2d.cpp)
    target_link_libraries(em2d PRIVATE phys ZLIB::ZLIB)
    target_include_directories(em2d PRIVATE demos demos/common)
endif()

# 3D OpenGL demos (rigid bodies, cloth, hair) — built only if GLFW/GLEW present.
find_package(PkgConfig QUIET)
find_package(OpenGL QUIET)
if(PkgConfig_FOUND AND OpenGL_FOUND)
    pkg_check_modules(GLFW glfw3)
    pkg_check_modules(GLEW glew)
    find_package(ZLIB QUIET)
    if(GLFW_FOUND AND GLEW_FOUND AND ZLIB_FOUND)
        foreach(d rigid3d cloth3d hair3d clothesline3d destruction3d wall3d playground3d snow3d mirror3d forge3d rope3d chains3d tangle3d burn3d harmonics3d nonnewtonian3d lava3d leaves3d galton3d articulation3d softbody3d constraints3d robotics3d convex3d stack3d antenna3d explosion3d roomblast3d bulletglass3d)
            add_executable(${d} demos/${d}.cpp)
            target_link_libraries(${d} PRIVATE phys ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} OpenGL::GL ZLIB::ZLIB Threads::Threads)
            target_include_directories(${d} PRIVATE demos ${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
        endforeach()
    else()
        message(STATUS "GLFW/GLEW/zlib not all found — skipping 3D OpenGL demos")
    endif()
endif()

# Optional CUDA GPU module (gpu_sph) — built only if a CUDA compiler is present.
include(CheckLanguage)
check_language(CUDA)
if(CMAKE_CUDA_COMPILER)
    enable_language(CUDA)
    if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
        set(CMAKE_CUDA_ARCHITECTURES 90-virtual)   # PTX → JITs to newer GPUs (e.g. sm_120 Blackwell)
    endif()
    add_executable(test_gpu tests/test_gpu.cu)
    target_include_directories(test_gpu PRIVATE include tests)
    add_test(NAME gpu COMMAND test_gpu)
    if(GLFW_FOUND AND GLEW_FOUND AND ZLIB_FOUND)
        add_executable(gpu_fluid3d demos/gpu_fluid3d.cu)
        target_link_libraries(gpu_fluid3d PRIVATE ${GLFW_LIBRARIES} ${GLEW_LIBRARIES} OpenGL::GL ZLIB::ZLIB)
        target_include_directories(gpu_fluid3d PRIVATE include demos ${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
    endif()
else()
    message(STATUS "No CUDA compiler found — skipping the GPU module (gpu_sph)")
endif()
